{
  "version": 4,
  "terraform_version": "0.14.9",
  "serial": 89,
  "lineage": "b3c02b09-0201-0d65-dde4-5a14bd29cc05",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "terraform_ig",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:418332864467:internet-gateway/igw-03928d8af8ecc7992",
            "id": "igw-03928d8af8ecc7992",
            "owner_id": "418332864467",
            "tags": {
              "Name": "Terraform Internet Gateway"
            },
            "vpc_id": "vpc-0a5488c878db9bb86"
          },
          "dependencies": [
            "aws_vpc.terraform_custom_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public_rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:418332864467:route-table/rtb-00104bf22288db72a",
            "id": "rtb-00104bf22288db72a",
            "owner_id": "418332864467",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-03928d8af8ecc7992",
                "instance_id": "",
                "ipv6_cidr_block": "::/0",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              },
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-03928d8af8ecc7992",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "Public Route Table"
            },
            "vpc_id": "vpc-0a5488c878db9bb86"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.terraform_ig",
            "aws_vpc.terraform_custom_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public_rt_association",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0faefea21bf509078",
            "route_table_id": "rtb-00104bf22288db72a",
            "subnet_id": "subnet-03bd86b64631e5b73"
          },
          "dependencies": [
            "aws_internet_gateway.terraform_ig",
            "aws_route_table.public_rt",
            "aws_subnet.terraform_nginx_public_subnet",
            "aws_vpc.terraform_custom_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "terraform_app_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:418332864467:security-group/sg-0f6e14998f4b01ef3",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0f6e14998f4b01ef3",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 8080,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 8080
              }
            ],
            "name": "app 8080",
            "name_prefix": "",
            "owner_id": "418332864467",
            "revoke_rules_on_delete": false,
            "tags": null,
            "timeouts": null,
            "vpc_id": "vpc-0a5488c878db9bb86"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.terraform_custom_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "terraform_mongo_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:418332864467:security-group/sg-04c689ff983a1a7af",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-04c689ff983a1a7af",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 27017,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 27017
              }
            ],
            "name": "mongo 27017",
            "name_prefix": "",
            "owner_id": "418332864467",
            "revoke_rules_on_delete": false,
            "tags": null,
            "timeouts": null,
            "vpc_id": "vpc-0a5488c878db9bb86"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.terraform_custom_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "terraform_nginx_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:418332864467:security-group/sg-0992dc285b93cce98",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0992dc285b93cce98",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "Nginx 80 SSH",
            "name_prefix": "",
            "owner_id": "418332864467",
            "revoke_rules_on_delete": false,
            "tags": null,
            "timeouts": null,
            "vpc_id": "vpc-0a5488c878db9bb86"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.terraform_custom_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "terraform_app_private_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:418332864467:subnet/subnet-051f308656331f8b2",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2a",
            "availability_zone_id": "usw2-az2",
            "cidr_block": "10.0.2.0/24",
            "id": "subnet-051f308656331f8b2",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "418332864467",
            "tags": {
              "Name": "Terraform App Private Subnet"
            },
            "tags_all": {
              "Name": "Terraform App Private Subnet"
            },
            "vpc_id": "vpc-0a5488c878db9bb86"
          },
          "dependencies": [
            "aws_vpc.terraform_custom_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "terraform_database_private_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:418332864467:subnet/subnet-00702bb94a8ea72a1",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2a",
            "availability_zone_id": "usw2-az2",
            "cidr_block": "10.0.3.0/24",
            "id": "subnet-00702bb94a8ea72a1",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "418332864467",
            "tags": {
              "Name": "Terraform Database Private Subnet"
            },
            "tags_all": {
              "Name": "Terraform Database Private Subnet"
            },
            "vpc_id": "vpc-0a5488c878db9bb86"
          },
          "dependencies": [
            "aws_vpc.terraform_custom_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "terraform_nginx_public_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:418332864467:subnet/subnet-03bd86b64631e5b73",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2a",
            "availability_zone_id": "usw2-az2",
            "cidr_block": "10.0.1.0/24",
            "id": "subnet-03bd86b64631e5b73",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "418332864467",
            "tags": {
              "Name": "Terraform Nginx Public Subnet"
            },
            "tags_all": {
              "Name": "Terraform Nginx Public Subnet"
            },
            "vpc_id": "vpc-0a5488c878db9bb86"
          },
          "dependencies": [
            "aws_vpc.terraform_custom_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "terraform_custom_vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:418332864467:vpc/vpc-0a5488c878db9bb86",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0a5f076626a56c785",
            "default_route_table_id": "rtb-065c1024fa4d1ec9d",
            "default_security_group_id": "sg-09574ade0ad4038f4",
            "dhcp_options_id": "dopt-42287e3a",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "id": "vpc-0a5488c878db9bb86",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-065c1024fa4d1ec9d",
            "owner_id": "418332864467",
            "tags": {
              "Name": "Terraform Custom VPC"
            },
            "tags_all": {
              "Name": "Terraform Custom VPC"
            }
          }
        }
      ]
    }
  ]
}